@@ -12,7 +12,7 @@
 
   <property name="Name" value="Ant"/>
   <property name="name" value="ant"/>
-  <property name="version" value="1.2alpha"/>
+  <property name="version" value="1.2alpha2"/>
 
   <property name="ant.home" value="."/>
   <property name="src.bin.dir" value="src/bin"/>
